cmake adds correct flags to libjson when it's compiled in debug mode

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,14 @@
 cmake_minimum_required (VERSION 2.6)
 project (KRAKENAPI)
 
+#-------------------------------------------------------------------------------
+# Control CMAKE_BUILD_TYPE, default: Debug
+#-------------------------------------------------------------------------------
+if (NOT CMAKE_BUILD_TYPE)
+   set (CMAKE_BUILD_TYPE "Debug" CACHE string "Build type" FORCE)
+endif (NOT CMAKE_BUILD_TYPE)
+message (STATUS "Build type: " ${CMAKE_BUILD_TYPE})
+
 set (LIBS "")
 
 #-------------------------------------------------------------------------------
@@ -20,19 +28,22 @@ list(APPEND LIBS ${CURL_LIBRARIES})
 #-------------------------------------------------------------------------------
 # Add library libjson
 #-------------------------------------------------------------------------------
-set(LIBJSON_SOURCE_DIR ${CMAKE_HOME_DIRECTORY}/libjson/_internal/Source)
-aux_source_directory(${LIBJSON_SOURCE_DIR} LIBJSON_SOURCE_FILES)
-add_library(libjson STATIC ${LIBJSON_SOURCE_FILES})
+set (LIBJSON_SOURCE_DIR ${CMAKE_HOME_DIRECTORY}/libjson/_internal/Source)
+aux_source_directory (${LIBJSON_SOURCE_DIR} LIBJSON_SOURCE_FILES)
+add_library (libjson STATIC ${LIBJSON_SOURCE_FILES})
+
 # remove "lib" prefix from the name of the libjson archive
-set_target_properties(libjson PROPERTIES PREFIX "")
-list(APPEND LIBS libjson)
+set_target_properties (libjson PROPERTIES PREFIX "")
+
+# set some properties when CMAKE_BUILD_TYPE is "Debug"
+set_target_properties (libjson PROPERTIES 
+		      COMPILE_DEFINITIONS_DEBUG "JSON_DEBUG;JSON_SAFE"
+		      DEBUG_POSTFIX "d")
+
+list (APPEND LIBS libjson)
 
 #-------------------------------------------------------------------------------
 # Add the executable
 #-------------------------------------------------------------------------------
 add_executable (test main.cpp kapi.cpp)
 target_link_libraries (test ${LIBS} libjson)
-
-message("CMAKE_CXX_FLAGS_DEBUG is ${CMAKE_CXX_FLAGS_DEBUG}")
-message("CMAKE_CXX_FLAGS_RELEASE is ${CMAKE_CXX_FLAGS_RELEASE}")
-message("CMAKE_BUILD_TYPE is ${CMAKE_BUILD_TYPE}")
