--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,6 @@ if (NOT CMAKE_BUILD_TYPE)
 endif (NOT CMAKE_BUILD_TYPE)
 message (STATUS "Build type: " ${CMAKE_BUILD_TYPE})
 
-set (LIBS "")
-
 #-------------------------------------------------------------------------------
 # Find OpenSSL
 #-------------------------------------------------------------------------------
@@ -24,6 +22,18 @@ list(APPEND LIBS ${OPENSSL_LIBRARIES})
 find_package (CURL REQUIRED)
 include_directories (${CURL_INCLUDE_DIR})
 list(APPEND LIBS ${CURL_LIBRARIES})
+
+#-------------------------------------------------------------------------------
+# Add library kapi (krakenapi)
+#-------------------------------------------------------------------------------
+add_library (kapi STATIC kapi.cpp)
+
+# set some properties when CMAKE_BUILD_TYPE is "Debug"
+set_target_properties (kapi PROPERTIES 
+		      COMPILE_DEFINITIONS_DEBUG "JSON_DEBUG;JSON_SAFE"
+		      DEBUG_POSTFIX "d")
+
+list (APPEND LIBS kapi)
 
 #-------------------------------------------------------------------------------
 # Add library libjson
@@ -45,6 +55,6 @@ list (APPEND LIBS libjson)
 #-------------------------------------------------------------------------------
 # Add the executable
 #-------------------------------------------------------------------------------
-add_executable (test main.cpp kapi.cpp)
-target_link_libraries (test ${LIBS} libjson)
+add_executable (test main.cpp)
+target_link_libraries (test ${LIBS})
 
