--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,20 @@
 cmake_minimum_required (VERSION 2.6)
 project (KRAKENAPI)
-#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 add_definitions("-std=c++11")
 
-
 IF (CMAKE_CXX_COMPILER_ID STREQUAL Clang)
 	add_definitions("-Wno-tautological-undefined-compare")
+
 ENDIF()
+
+IF (APPLE)
+    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -flat_namespace -undefined suppress")
+	set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -flat_namespace -undefined suppress")
+	set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -flat_namespace -undefined suppress")
+	set (CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} -flat_namespace -undefined suppress")
+	set (CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -flat_namespace -undefined suppress")
+ENDIF (APPLE)
 
 #-------------------------------------------------------------------------------
 IF (COMMAND cmake_policy)
