--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,17 +5,13 @@ add_definitions("-std=c++11")
 
 #-------------------------------------------------------------------------------
 IF (CMAKE_CXX_COMPILER_ID STREQUAL Clang)
-	add_definitions("-Wno-tautological-undefined-compare")
+	add_definitions("-Wno-tautological-compare")
 
 ENDIF()
 
 #-------------------------------------------------------------------------------
 IF (APPLE)
-	set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -flat_namespace -undefined suppress")
-	set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -flat_namespace -undefined suppress")
-	set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -flat_namespace -undefined suppress")
-	set (CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} -flat_namespace -undefined suppress")
-	set (CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -flat_namespace -undefined suppress")
+	set (CMAKE_MODULE_LINKER_FLAGS "-Wl,-flat_namespace -Wl,-undefined -Wl,suppress")
 ENDIF (APPLE)
 
 #-------------------------------------------------------------------------------
